bk_ida/gobmkida/c2/change_tactical_point
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/change_tactical_point/src/engine/worm.c:1652:25: error: use of undeclared identifier 'worm_data'
memcpy( v9, v7, sizeof( worm_data)); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/change_tactical_point/src/obj/1/worm.o] Error 1
